# dry_sampling_kernel

./: CMakeLists.txt  README.md  dry.cu  dry.cuh  dry_test.cu
